<resources>
    <string name="app_name">RC Sports</string>
    <string name="menu_finish">Sair</string>
    <string name="register_button_sale">Cadastrar Venda</string>
    <string name="register_button_client">Cadastrar Cliente</string>
    <string name="register_button_product">Cadastrar Produto</string>
    <string name="list_image_description">Imagem do Produto</string>
    <string name="list_edit_button_description">Botão de Edição</string>
    <string name="list_delete_button_description">Botão de Exclusão</string>
    <string name="name">Nome</string>
    <string name="address">Endereço</string>
    <string name="save">Salvar</string>
    <string name="leave">Sair</string>
    <string name="price">Valor</string>
    <string name="update">Atualizar</string>
    <string name="registering_new_client">Cadastrar novo cliente</string>
    <string name="edit_existing_client">Editar cliente existente</string>
    <string name="registering_new_product">Cadastrar novo produto</string>
    <string name="edit_existing_product">Editar produto cadastrado</string>
    <string name="select_client">Selecione um cliente</string>
    <string name="registering_new_sale">Cadastrar nova venda</string>
    <string name="add">Adicionar</string>
    <string name="default_value_amount_product">1</string>
    <string name="prepayment">Pagamento</string>
    <string name="edit_new_sale">Editar venda existente</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total_value">Valor total:</string>
    <string name="paid">Valor pago:</string>
    <string name="remaining_amount">Valor restante:</string>
    <string name="change_amount">Troco de:</string>
    <string name="currency">R$</string>
    <string name="ok">Ok</string>
    <string name="excludes">Excluir</string>
    <string name="search">Procurar</string>
    <string name="select_product">Selecione um produto</string>
    <string name="import_database">Importar Dados</string>
    <string name="export_database">Exportar Dados</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="phone">Telefone</string>
    <string name="edit">Editar</string>
    <string name="popup_sale_paid">"    Listar Pagamentos"</string>
    <string name="popup_sale_edit">"    Editar Venda"</string>
    <string name="popup_sale_delete">"    Excluir Venda"</string>
    <string name="popup_client_edit">"    Editar Cliente"</string>
    <string name="popup_client_delete">"    Excluir Cliente"</string>
    <string name="popup_product_edit">"    Editar Produto"</string>
    <string name="popup_product_delete">"    Excluir Produto"</string>
    <string name="default_text_value">1</string>

</resources>
