<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingBottom="18dp"
        android:paddingTop="15dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/dialog_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:nextFocusRight="@+id/dialog_product_button_save"
        android:paddingBottom="18dp"
        android:paddingTop="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_product_button_leave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:background="@drawable/button_shape_material_blue"
            android:focusable="false"
            android:text="@string/leave"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dialog_product_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:background="@drawable/button_shape_material_blue"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>